Update diagnose integrated LLm and full data